<resources>


    <!--   量产工具的   -->
    <string name="app_name">UMindLite SDK</string>
    <!--Bluetooth-->
    <string name="link_bluetooth">搜索到的蓝牙设备</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="choose_music">选择音乐</string>
    <string name="line_color">线条颜色</string>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>

    <!-- Preferences -->
    <string name="pref_category">Category</string>
    <string name="color1_title">Color 1</string>
    <string name="color1_summary">black color by default, set by reference</string>
    <string name="color2_title">Color 2</string>
    <string name="color2_summary">not persistent color\nalpha slider added via code</string>
    <string name="color3_title">Color 3</string>
    <string name="color3_summary">picker with alpha slider</string>
    <string name="color4_title">Color 4</string>
    <string name="color4_summary">color set with HEX code in xml</string>integer.xml
    <string name="cancel1">Cancel</string>
    <string name="confirm1">Confirm</string>

    <string name="enter_max_fft_value">Max FFT</string>
    <string name="fft_setting">Set FFT</string>
    <string name="refresh">Refresh</string>
    <string name="refreshing">Refreshing</string>
    <string name="scanning">Scanning</string>
    <string name="connected">Connected</string>
    <string name="unconnected">Not connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="reset">Calibrate</string>

    <string name="send">Send</string>
    <string name="get">Get</string>
    <string name="setName">Change Name</string>
    <string name="command_error">命令格式不正确</string>

    <!--   新定义的   -->
    <string name="select_fun">Select function</string>
    <string name="firmware_update">固件升级</string>
    <string name="show_connect">Connect Ble</string>
    <string name="connect_serial">Connect Serial</string>
    <string name="update_firmware">Update Firmware</string>
    <string name="get_set_command">命令收发</string>

    <string name="connect_state">State</string>
    <string name="uml_noise">Noise</string>
    <string name="uml_rssi">Rssi</string>
    <string name="uml_att">Attention</string>
    <string name="uml_med">Meditation</string>

    <string name="uml_model">Model</string>
    <string name="uml_soft">Software</string>
    <string name="uml_hard">Hardware</string>
    <string name="uml_id">Device ID</string>

    <string name="uml_voltage">Voltage</string>
    <string name="uml_battery">Battery</string>
    <string name="uml_head">Head</string>

    <string name="gyro_data">Gyro</string>
    <string name="rollAcc">rollAcc</string>
    <string name="pitchAcc">pitchAcc</string>
    <string name="yawAcc">yawAcc</string>
    <string name="gyroX">gyroX</string>
    <string name="gyroY">gyroY</string>
    <string name="gyroZ">gyroZ</string>
    <string name="roll">roll</string>
    <string name="pitch">pitch</string>
    <string name="yaw">yaw</string>
</resources>
