<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/title_bar"
        />
    <TextView
        android:id="@+id/textView_roll"
        style="@style/normal_textView_style"
        android:text="@string/roll" />
    <TextView
        android:id="@+id/textView_pitch"
        style="@style/normal_textView_style"
        android:text="@string/pitch" />

    <TextView
        android:id="@+id/textView_yaw"
        style="@style/normal_textView_style"
        android:text="@string/yaw" />

    <com.example.yy.bleupdateshowresult.view.glsurface.CubeGLSurface
        android:id="@+id/cubeGLSurface"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>