<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/show_connect_button_height"
        android:layout_marginTop="@dimen/top_margin_small"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:text="@string/connect"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_disconnect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.5"
            android:background="#00BCD4"
            android:text="@string/disconnect"
            android:textColor="#FFFFFF"
            android:visibility="gone" />

        <Button
            android:id="@+id/bReset"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_selector"
            android:layout_marginStart="8dp"
            android:text="@string/reset"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_gyro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:layout_marginStart="8dp"
            android:text="@string/gyro_data"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/connect_state" />

            <TextView
                android:id="@+id/connect_state"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/show_connect_button_height"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/uml_rssi"/>

            <TextView
                android:id="@+id/textView_rssi"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="0"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="@dimen/margin_small"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/uml_noise" />


            <TextView
                android:id="@+id/textView_noise"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:text="0"
                android:gravity="center_vertical" />

        <TextView
            android:id="@+id/ck_err_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="校验和失败次数" />

        <TextView
            android:id="@+id/ck_err_val_tv"
            android:layout_marginStart="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="0"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/uml_att" />

        <TextView
            android:id="@+id/tvAtt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:text="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/uml_med" />

        <TextView
            android:id="@+id/tvMed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:text="0" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/show_connect_button_height"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/uml_model"/>

        <TextView
            android:id="@+id/tvModel"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:text="0"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/uml_hard" />

        <TextView
            android:id="@+id/tvHard"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:text="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="@dimen/margin_small"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/uml_soft" />

        <TextView
            android:id="@+id/tvSoft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="0"
            android:gravity="center_vertical" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/uml_id" />

        <TextView
            android:id="@+id/tvDeviceId"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:text="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/show_connect_button_height"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/uml_voltage"/>

        <TextView
            android:id="@+id/tvVoltage"
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:text="0"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/uml_battery" />

        <TextView
            android:id="@+id/tvBattery"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:text="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/uml_head" />

        <TextView
            android:id="@+id/tvHead"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/lcvEeg"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <lecho.lib.hellocharts.view.ColumnChartView
            android:id="@+id/ccvWave"
            android:layout_width="match_parent"
            android:padding="16dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>