<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginTop="@dimen/dialog_topm_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_max_fft_value"
            />
        <EditText
            android:id="@+id/editText"
            android:background="@color/white"
            android:layout_marginLeft="@dimen/margin1"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel1"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/button_confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/confirm1"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>